# docs/api/openapi/openapi.yaml
@@ -424,31 +424,6 @@ paths:
             application/json:
               schema:
                 $ref: ./openapi_components_core.yaml#/components/schemas/DownloadUrlResponse
-  /settings:
-    get:
-      summary: Get settings
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: ./openapi_components_core.yaml#/components/schemas/Settings
-    patch:
-      summary: Update settings
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: ./openapi_components_requests.yaml#/components/schemas/SettingsUpdateRequest
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: ./openapi_components_core.yaml#/components/schemas/Settings
 components:
   securitySchemes:
     bearerAuth:
